--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,9 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.projectKey>devops_test-apiwiz-sample-spring-boot_306a48fc-7916-47d6-a7ab-2ae478f2fab2</sonar.projectKey>
+ 		<sonar.projectName>test-apiwiz-sample-spring-boot</sonar.projectName>
+        <sonar.qualitygate.wait>true</sonar.qualitygate.wait>
 	</properties>
 	<dependencies>
 		<dependency>
